--- a/2. Exploratory Data Analysis on Baseball Dataset/Johri_Animesh_Assignment#2.ipynb
+++ b/2. Exploratory Data Analysis on Baseball Dataset/Johri_Animesh_Assignment#2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Github Link : https://github.com/AnimeshJohri/Data-Science-Projects/blob/master/2.%20Exploratory%20Data%20Analysis%20on%20Baseball%20Dataset/Johri_Animesh_Assignment02.ipynb"
+    "###### Github Link of Github Repository folder : https://github.com/AnimeshJohri/Data-Science-Projects/tree/master/2.%20Exploratory%20Data%20Analysis%20on%20Baseball%20Dataset"
    ]
   },
   {
